// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 1`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627322580000,
    "y": 0,
  },
  Object {
    "x": 1627322640000,
    "y": 0,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": null,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": null,
  },
  Object {
    "x": 1627323000000,
    "y": 0,
  },
  Object {
    "x": 1627323060000,
    "y": 0,
  },
  Object {
    "x": 1627323120000,
    "y": 0,
  },
  Object {
    "x": 1627323180000,
    "y": null,
  },
  Object {
    "x": 1627323240000,
    "y": null,
  },
  Object {
    "x": 1627323300000,
    "y": 0,
  },
  Object {
    "x": 1627323360000,
    "y": null,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 2`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627322580000,
    "y": 0.222222222222222,
  },
  Object {
    "x": 1627322640000,
    "y": 0,
  },
  Object {
    "x": 1627322700000,
    "y": null,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": 0,
  },
  Object {
    "x": 1627322880000,
    "y": null,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": null,
  },
  Object {
    "x": 1627323060000,
    "y": 0,
  },
  Object {
    "x": 1627323120000,
    "y": null,
  },
  Object {
    "x": 1627323180000,
    "y": 0,
  },
  Object {
    "x": 1627323240000,
    "y": 0,
  },
  Object {
    "x": 1627323300000,
    "y": 0,
  },
  Object {
    "x": 1627323360000,
    "y": 0,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 1`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 22122025.6666667,
  },
  Object {
    "x": 1627322580000,
    "y": 38213.4,
  },
  Object {
    "x": 1627322640000,
    "y": 11967,
  },
  Object {
    "x": 1627322700000,
    "y": 21119,
  },
  Object {
    "x": 1627322760000,
    "y": 15359,
  },
  Object {
    "x": 1627322820000,
    "y": null,
  },
  Object {
    "x": 1627322880000,
    "y": 24359,
  },
  Object {
    "x": 1627322940000,
    "y": null,
  },
  Object {
    "x": 1627323000000,
    "y": 20607,
  },
  Object {
    "x": 1627323060000,
    "y": 13375,
  },
  Object {
    "x": 1627323120000,
    "y": 33023,
  },
  Object {
    "x": 1627323180000,
    "y": null,
  },
  Object {
    "x": 1627323240000,
    "y": null,
  },
  Object {
    "x": 1627323300000,
    "y": 21887,
  },
  Object {
    "x": 1627323360000,
    "y": null,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 2`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 17813.8571428571,
  },
  Object {
    "x": 1627322580000,
    "y": 7357997.22222222,
  },
  Object {
    "x": 1627322640000,
    "y": 71887,
  },
  Object {
    "x": 1627322700000,
    "y": null,
  },
  Object {
    "x": 1627322760000,
    "y": 20991,
  },
  Object {
    "x": 1627322820000,
    "y": 6029311,
  },
  Object {
    "x": 1627322880000,
    "y": null,
  },
  Object {
    "x": 1627322940000,
    "y": 5570559,
  },
  Object {
    "x": 1627323000000,
    "y": null,
  },
  Object {
    "x": 1627323060000,
    "y": 27263,
  },
  Object {
    "x": 1627323120000,
    "y": null,
  },
  Object {
    "x": 1627323180000,
    "y": 22079,
  },
  Object {
    "x": 1627323240000,
    "y": 26367,
  },
  Object {
    "x": 1627323300000,
    "y": 8831,
  },
  Object {
    "x": 1627323360000,
    "y": 15875,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 1`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 3,
  },
  Object {
    "x": 1627322580000,
    "y": 1,
  },
  Object {
    "x": 1627322640000,
    "y": 2,
  },
  Object {
    "x": 1627322700000,
    "y": 1,
  },
  Object {
    "x": 1627322760000,
    "y": 2,
  },
  Object {
    "x": 1627322820000,
    "y": 0,
  },
  Object {
    "x": 1627322880000,
    "y": 2,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": 2,
  },
  Object {
    "x": 1627323060000,
    "y": 1,
  },
  Object {
    "x": 1627323120000,
    "y": 1,
  },
  Object {
    "x": 1627323180000,
    "y": 0,
  },
  Object {
    "x": 1627323240000,
    "y": 0,
  },
  Object {
    "x": 1627323300000,
    "y": 2,
  },
  Object {
    "x": 1627323360000,
    "y": 0,
  },
  Object {
    "x": 1627323420000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 2`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 4,
  },
  Object {
    "x": 1627322580000,
    "y": 5,
  },
  Object {
    "x": 1627322640000,
    "y": 2,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 1,
  },
  Object {
    "x": 1627322820000,
    "y": 1,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": 1,
  },
  Object {
    "x": 1627323000000,
    "y": 0,
  },
  Object {
    "x": 1627323060000,
    "y": 2,
  },
  Object {
    "x": 1627323120000,
    "y": 0,
  },
  Object {
    "x": 1627323180000,
    "y": 2,
  },
  Object {
    "x": 1627323240000,
    "y": 1,
  },
  Object {
    "x": 1627323300000,
    "y": 1,
  },
  Object {
    "x": 1627323360000,
    "y": 2,
  },
  Object {
    "x": 1627323420000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 1`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 17813.8571428571,
  },
  Object {
    "x": 1627321680000,
    "y": 7357997.22222222,
  },
  Object {
    "x": 1627321740000,
    "y": 71887,
  },
  Object {
    "x": 1627321800000,
    "y": null,
  },
  Object {
    "x": 1627321860000,
    "y": 20991,
  },
  Object {
    "x": 1627321920000,
    "y": 6029311,
  },
  Object {
    "x": 1627321980000,
    "y": null,
  },
  Object {
    "x": 1627322040000,
    "y": 5570559,
  },
  Object {
    "x": 1627322100000,
    "y": null,
  },
  Object {
    "x": 1627322160000,
    "y": 27263,
  },
  Object {
    "x": 1627322220000,
    "y": null,
  },
  Object {
    "x": 1627322280000,
    "y": 22079,
  },
  Object {
    "x": 1627322340000,
    "y": 26367,
  },
  Object {
    "x": 1627322400000,
    "y": 8831,
  },
  Object {
    "x": 1627322460000,
    "y": 15875,
  },
  Object {
    "x": 1627322520000,
    "y": 22122025.6666667,
  },
  Object {
    "x": 1627322580000,
    "y": 38213.4,
  },
  Object {
    "x": 1627322640000,
    "y": 11967,
  },
  Object {
    "x": 1627322700000,
    "y": 21119,
  },
  Object {
    "x": 1627322760000,
    "y": 15359,
  },
  Object {
    "x": 1627322820000,
    "y": null,
  },
  Object {
    "x": 1627322880000,
    "y": 24359,
  },
  Object {
    "x": 1627322940000,
    "y": null,
  },
  Object {
    "x": 1627323000000,
    "y": 20607,
  },
  Object {
    "x": 1627323060000,
    "y": 13375,
  },
  Object {
    "x": 1627323120000,
    "y": 33023,
  },
  Object {
    "x": 1627323180000,
    "y": null,
  },
  Object {
    "x": 1627323240000,
    "y": null,
  },
  Object {
    "x": 1627323300000,
    "y": 21887,
  },
  Object {
    "x": 1627323360000,
    "y": null,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 2`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 4,
  },
  Object {
    "x": 1627321680000,
    "y": 5,
  },
  Object {
    "x": 1627321740000,
    "y": 2,
  },
  Object {
    "x": 1627321800000,
    "y": 0,
  },
  Object {
    "x": 1627321860000,
    "y": 1,
  },
  Object {
    "x": 1627321920000,
    "y": 1,
  },
  Object {
    "x": 1627321980000,
    "y": 0,
  },
  Object {
    "x": 1627322040000,
    "y": 1,
  },
  Object {
    "x": 1627322100000,
    "y": 0,
  },
  Object {
    "x": 1627322160000,
    "y": 2,
  },
  Object {
    "x": 1627322220000,
    "y": 0,
  },
  Object {
    "x": 1627322280000,
    "y": 2,
  },
  Object {
    "x": 1627322340000,
    "y": 1,
  },
  Object {
    "x": 1627322400000,
    "y": 1,
  },
  Object {
    "x": 1627322460000,
    "y": 2,
  },
  Object {
    "x": 1627322520000,
    "y": 3,
  },
  Object {
    "x": 1627322580000,
    "y": 1,
  },
  Object {
    "x": 1627322640000,
    "y": 2,
  },
  Object {
    "x": 1627322700000,
    "y": 1,
  },
  Object {
    "x": 1627322760000,
    "y": 2,
  },
  Object {
    "x": 1627322820000,
    "y": 0,
  },
  Object {
    "x": 1627322880000,
    "y": 2,
  },
  Object {
    "x": 1627322940000,
    "y": 0,
  },
  Object {
    "x": 1627323000000,
    "y": 2,
  },
  Object {
    "x": 1627323060000,
    "y": 1,
  },
  Object {
    "x": 1627323120000,
    "y": 1,
  },
  Object {
    "x": 1627323180000,
    "y": 0,
  },
  Object {
    "x": 1627323240000,
    "y": 0,
  },
  Object {
    "x": 1627323300000,
    "y": 2,
  },
  Object {
    "x": 1627323360000,
    "y": 0,
  },
  Object {
    "x": 1627323420000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 3`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627321680000,
    "y": 0.222222222222222,
  },
  Object {
    "x": 1627321740000,
    "y": 0,
  },
  Object {
    "x": 1627321800000,
    "y": null,
  },
  Object {
    "x": 1627321860000,
    "y": 0,
  },
  Object {
    "x": 1627321920000,
    "y": 0,
  },
  Object {
    "x": 1627321980000,
    "y": null,
  },
  Object {
    "x": 1627322040000,
    "y": 0,
  },
  Object {
    "x": 1627322100000,
    "y": null,
  },
  Object {
    "x": 1627322160000,
    "y": 0,
  },
  Object {
    "x": 1627322220000,
    "y": null,
  },
  Object {
    "x": 1627322280000,
    "y": 0,
  },
  Object {
    "x": 1627322340000,
    "y": 0,
  },
  Object {
    "x": 1627322400000,
    "y": 0,
  },
  Object {
    "x": 1627322460000,
    "y": 0,
  },
  Object {
    "x": 1627322520000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627322580000,
    "y": 0,
  },
  Object {
    "x": 1627322640000,
    "y": 0,
  },
  Object {
    "x": 1627322700000,
    "y": 0,
  },
  Object {
    "x": 1627322760000,
    "y": 0,
  },
  Object {
    "x": 1627322820000,
    "y": null,
  },
  Object {
    "x": 1627322880000,
    "y": 0,
  },
  Object {
    "x": 1627322940000,
    "y": null,
  },
  Object {
    "x": 1627323000000,
    "y": 0,
  },
  Object {
    "x": 1627323060000,
    "y": 0,
  },
  Object {
    "x": 1627323120000,
    "y": 0,
  },
  Object {
    "x": 1627323180000,
    "y": null,
  },
  Object {
    "x": 1627323240000,
    "y": null,
  },
  Object {
    "x": 1627323300000,
    "y": 0,
  },
  Object {
    "x": 1627323360000,
    "y": null,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data for latency aggregation 99th percentile 1`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 44799,
  },
  Object {
    "x": 1627321680000,
    "y": 66060287,
  },
  Object {
    "x": 1627321740000,
    "y": 165887,
  },
  Object {
    "x": 1627321800000,
    "y": null,
  },
  Object {
    "x": 1627321860000,
    "y": 20991,
  },
  Object {
    "x": 1627321920000,
    "y": 6029311,
  },
  Object {
    "x": 1627321980000,
    "y": null,
  },
  Object {
    "x": 1627322040000,
    "y": 5570559,
  },
  Object {
    "x": 1627322100000,
    "y": null,
  },
  Object {
    "x": 1627322160000,
    "y": 41471,
  },
  Object {
    "x": 1627322220000,
    "y": null,
  },
  Object {
    "x": 1627322280000,
    "y": 29439,
  },
  Object {
    "x": 1627322340000,
    "y": 26367,
  },
  Object {
    "x": 1627322400000,
    "y": 8831,
  },
  Object {
    "x": 1627322460000,
    "y": 48127,
  },
  Object {
    "x": 1627322520000,
    "y": 66322431,
  },
  Object {
    "x": 1627322580000,
    "y": 79871,
  },
  Object {
    "x": 1627322640000,
    "y": 15039,
  },
  Object {
    "x": 1627322700000,
    "y": 21119,
  },
  Object {
    "x": 1627322760000,
    "y": 16255,
  },
  Object {
    "x": 1627322820000,
    "y": null,
  },
  Object {
    "x": 1627322880000,
    "y": 45055,
  },
  Object {
    "x": 1627322940000,
    "y": null,
  },
  Object {
    "x": 1627323000000,
    "y": 31743,
  },
  Object {
    "x": 1627323060000,
    "y": 13375,
  },
  Object {
    "x": 1627323120000,
    "y": 33023,
  },
  Object {
    "x": 1627323180000,
    "y": null,
  },
  Object {
    "x": 1627323240000,
    "y": null,
  },
  Object {
    "x": 1627323300000,
    "y": 39935,
  },
  Object {
    "x": 1627323360000,
    "y": null,
  },
  Object {
    "x": 1627323420000,
    "y": null,
  },
]
`;
